# crisp-status-local

./: Cargo.toml  Dockerfile  PACKAGING.md  README.md  config.cfg
.github/workflows/: build.yml  test.yml
debian/: changelog  control  copyright  crisp-status-local.install  crisp-status-local.postinst  crisp-status-local.service  rules
examples/config/: systemd.service
scripts/: build_packages.sh  release_binaries.sh  sign_binaries.sh
src/: main.rs
src/config/: config.rs  defaults.rs  logger.rs  mod.rs  reader.rs
src/probe/: manager.rs  map.rs  mod.rs  poll.rs  replica.rs  report.rs  status.rs
src/utilities/: chunk.rs  mod.rs
