[package]
name = "crisp-status-local"
version = "1.3.0"
description = "Crisp Status local probe relay."
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/crisp-im/crisp-status-local"
repository = "https://github.com/crisp-im/crisp-status-local.git"
keywords = ["crisp", "crisp-status", "infrastructure", "status", "monitor"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@crisp.chat>"]

[badges]
travis-ci = { repository = "crisp-im/crisp-status-local", branch = "master" }
coveralls = { repository = "crisp-im/crisp-status-local", branch = "master", service = "github" }

[[bin]]
name = "crisp-status-local"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
clap = { version = "2.33", default-features = false }
lazy_static = "1.4"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
url = { version = "2.1", default-features = false }
fastping-rs = "0.1"
http_req = { version = "0.5", features = ["rust-tls"], default-features = false }
base64 = "0.11"
memmem = { version = "0.1", default-features = false }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
debug = false
debug-assertions = false
